--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -43,6 +43,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
+				<li>{{- if .user -}}<a href="/logout">Logout</a>{{- else -}}<a href="/login">Login</a>{{- end }}</li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
