--- a/web/templates/redirect.html
+++ b/web/templates/redirect.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=/">
+        <meta http-equiv="refresh" content="1; url={{ .Path }}">
         <script type="text/javascript">
-            window.location.href = "/"
+            window.location.href = "{{ .Path }}"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='/'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='{{ .Path }}'>link to example</a>.
     </body>
 </html>
