--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -43,8 +43,26 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-				<li>{{- if .user -}}<a href="/logout">Logout</a>{{- else -}}<a href="/login">Login</a>{{- end }}</li>
             </ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li>
+					{{ if .user }}
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Profile<b class="caret"></b></a>
+					</li>
+					<ul class="dropdown-menu">
+						<li>
+							<a href="#">
+								<img src="{{ .user.Picture }}" class="img-responsive">
+							</a>
+						</li>
+						<li><a href="/logout">Logout</a></li>
+					</ul>
+					{{ else }}
+					<a href="/login">Login</a>
+					{{ end }}
+				</li>
+			</ul>
         </div><!--/.nav-collapse -->
     </div>
 </nav>
