--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -55,6 +55,8 @@
 									<img src="{{ .user.Picture }}" class="img-responsive">
 								</a>
 							</li>
+							<hr>
+							<li><a href="/profile">Info</a></li>
 							<li><a href="/logout">Logout</a></li>
 						</ul>
 					</li>
