--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
+{{ define "head" }}
+<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
@@ -25,10 +23,8 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
-
-<body>
-
+{{ end }}
+{{ define "body"}}
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -70,12 +66,7 @@
 </nav>
 
 <div class="container">
-
-    <div class="starter-template">
-        <h1>{{ .title }}</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-    </div>
-
+{{ template "content" . }}
 </div><!-- /.container -->
 
 
@@ -87,5 +78,14 @@
 <script src="static/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+{{ end }}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	{{ template "head" . }}
+</head>
+<body>
+	{{ template "body" . }}
 </body>
 </html>
