--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -2,21 +2,28 @@
 <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="static/favicon.ico">
+    <meta name="description" content="Mirantis QA Education Portal">
+    <meta name="author" content="Alexey Galkin, Vladimir Jigulin">
+	<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/static/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/static/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/static/manifest.json">
+	<link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="apple-mobile-web-app-title" content="Mirantis QA Education Portal">
+	<meta name="application-name" content="Mirantis QA Education Portal">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Mirantis QA Education Portal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+	
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="static/css/starter-template.css" rel="stylesheet">
+	<link href="static/css/bootstrap-table.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,21 +45,17 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/challenges">Challenges</a></li>
+				<li><a href="/scoreboard">Scoreboard</a></li>
             </ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					{{ if .user }}
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Profile<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Actions<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li>
-								<a href="#">
-									<img src="{{ .user.Picture }}" class="img-responsive">
-								</a>
-							</li>
-							<hr>
-							<li><a href="/profile">Info</a></li>
+							<li><a href="/profile">Profile</a></li>
 							<li><a href="/logout">Logout</a></li>
 						</ul>
 					</li>
@@ -78,6 +81,7 @@
 <script src="static/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/static/js/bootstrap-table.js"></script>
 {{ end }}
 
 <!DOCTYPE html>
