--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,12 +11,14 @@
 
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+	
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="static/css/starter-template.css" rel="stylesheet">
+	<link href="static/css/bootstrap-table.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,21 +40,17 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/challenges">Challenges</a></li>
+				<li><a href="/scoreboard">Scoreboard</a></li>
             </ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
 					{{ if .user }}
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Profile<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Actions<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li>
-								<a href="#">
-									<img src="{{ .user.Picture }}" class="img-responsive">
-								</a>
-							</li>
-							<hr>
-							<li><a href="/profile">Info</a></li>
+							<li><a href="/profile">Profile</a></li>
 							<li><a href="/logout">Logout</a></li>
 						</ul>
 					</li>
@@ -78,6 +76,7 @@
 <script src="static/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/static/js/bootstrap-table.js"></script>
 {{ end }}
 
 <!DOCTYPE html>
