--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,12 +11,14 @@
 
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
+	
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="static/css/starter-template.css" rel="stylesheet">
+	<link href="static/css/bootstrap-table.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,7 +40,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/challenges">Challenges</a></li>
             </ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
@@ -78,6 +81,7 @@
 <script src="static/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <script src="static/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/static/original/js/bootstrap-table.js"></script>
 {{ end }}
 
 <!DOCTYPE html>
