--- a/web/templates/pages/index.html
+++ b/web/templates/pages/index.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
     <div class="starter-template">
-        <h1>{{ .title }}</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Welcome to Mirantis QA Portal</h1>
+        <p class="lead">Use this is a place for training and testing you QA skills.</p>
     </div>
 {{ end }}
