--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,5 +1,5 @@
-{{ define "head" }}
-<meta charset="utf-8">
+{{- define "head" }}
+	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Mirantis QA Education Portal">
@@ -13,25 +13,16 @@
 	<meta name="application-name" content="Mirantis QA Education Portal">
 
     <title>Mirantis QA Education Portal</title>
-
     <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-	
-
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
+    <link href="/static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="static/css/starter-template.css" rel="stylesheet">
-	<link href="static/css/bootstrap-table.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-{{ end }}
-{{ define "body"}}
+    <link href="/static/css/starter-template.css" rel="stylesheet">
+	<link href="/static/css/bootstrap-table.css" rel="stylesheet">
+	{{- template "css-custom" . -}}
+{{- end -}}
+{{- define "body" }}
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
@@ -51,17 +42,14 @@
             </ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
-					{{ if .user }}
+					{{ if .user -}}
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Actions<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="/profile">Profile</a></li>
-							<li><a href="/logout">Logout</a></li>
-						</ul>
+						<li><a href="/profile">Profile</a></li>
+						<li><a href="/logout">Logout</a></li>
 					</li>
-					{{ else }}
-					<a href="/login">Login</a>
-					{{ end }}
+					{{- else -}}
+					<li><a href="/login">Login</a></li>
+					{{- end }}
 				</li>
 			</ul>
         </div><!--/.nav-collapse -->
@@ -69,27 +57,20 @@
 </nav>
 
 <div class="container">
-{{ template "content" . }}
+{{- template "content" . -}}
 </div><!-- /.container -->
 
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="static/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="static/js/bootstrap.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="static/js/ie10-viewport-bug-workaround.js"></script>
+<script src="/static/js/jquery-3.1.1.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/ie10-viewport-bug-workaround.js"></script>
 <script src="/static/js/bootstrap-table.js"></script>
-{{ end }}
-
+<script src="/static/js/qa_portal.js"></script>
+{{- template "js-custom" . -}}
+{{- end -}}
+{{- define "css-custom" }}{{- end -}}
+{{- define "js-custom" }}{{- end -}}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	{{ template "head" . }}
-</head>
-<body>
-	{{ template "body" . }}
-</body>
+<head>{{ template "head" . }}</head>
+<body>{{ template "body" . }}</body>
 </html>
