Profile page improves
Implement /api/history

Change-Id: I30c2c6a415c97cc550d7e2dcb5dc3c484d2ed5a4

--- a/web/templates/pages/profile.html
+++ b/web/templates/pages/profile.html
@@ -30,10 +30,10 @@
                        data-show-columns="false">
                     <thead>
                         <tr>
-							<th data-field="Date">Date</th>
-							<th data-field="Attempt">Attempt</th>
-							<th data-field="Task">Task</th>
-							<th data-field="Rxust">Result</th>
+							<th data-field="Id">Id</th>
+							<th data-field="Challenge">Challenge</th>
+							<th data-field="State">State</th>
+							<th data-field="Duration">Duration</th>
                         </tr>
                     </thead>
                 </table>
