Implement dataFormatter for history in profile page and scoreboard
Change-Id: Id58efc8d1ebaac50ec88874afb7f588afa70c561

--- a/web/templates/pages/scoreboard.html
+++ b/web/templates/pages/scoreboard.html
@@ -3,20 +3,12 @@
         <div class="main">
             <h1 class="page-header">Scoreboard</h1>
             <div class="table-responsive">
-                <table data-toggle="table"
-                       data-url="/api/users"
-                       data-search="true"
-                       data-show-refresh="true"
-                       data-show-toggle="false"
-                       data-show-columns="false">
-                    <thead>
-                        <tr>
-							<th data-field="Score">Score</th>
-							<th data-field="Name">Name</th>
-                        </tr>
-                    </thead>
+                <table id="qa-users">
                 </table>
             </div>
         </div>
     </div>
 {{ end }}
+{{ define "js-custom" -}}
+<script>$(function(){ qa_portal.initUsers(); });</script>
+{{- end }}
