--- a/web/templates/pages/profile.html
+++ b/web/templates/pages/profile.html
@@ -22,20 +22,7 @@
 
           <h2 class="sub-header">History</h2>
           <div class="table-responsive">
-                <table data-toggle="table"
-                       data-url="/api/history"
-                       data-search="false"
-                       data-show-refresh="false"
-                       data-show-toggle="false"
-                       data-show-columns="false">
-                    <thead>
-                        <tr>
-							<th data-field="Id">Id</th>
-							<th data-field="Challenge">Challenge</th>
-							<th data-field="State">State</th>
-							<th data-field="Duration">Duration</th>
-                        </tr>
-                    </thead>
+                <table data-toggle="table" id="history">
                 </table>
           </div>
         </div>
